--- a/app/templates/bookingDetail.html
+++ b/app/templates/bookingDetail.html
@@ -269,25 +269,13 @@
                     class="fa-solid fa-angles-right"
                     style="color: #74C0FC;"></i></p>
             <div id="infomation-room" class="collapse">
-                Các phòng nghỉ tại đây có TV màn hình phẳng, khu vực tiếp khách
-                và minibar. Các phòng tắm riêng đi kèm vòi sen nước nóng, khăn
-                tắm cùng đồ vệ sinh cá nhân miễn phí.
-
-                Tại YaYa Sai Gon Hotel Bui Vien Walking Street, du khách sẽ tìm
-                thấy lễ tân 24 giờ với chỗ để hành lý. Khách sạn còn có các tiện
-                nghi như dịch vụ cho thuê xe máy, bàn đặt tour và dịch vụ giặt
-                là/ủi.
-
+                {{hotel['room-Details']['information2']}}
                 <h6>Chính sách hủy</h6>
                 Không hỗ trợ hoàn huỷ
                 <h6>Bữa ăn</h6>
                 Giá đã bao gồm bữa sáng
                 <h6>Xác nhận</h6>
-                Phòng này có mức giá rất rẻ nên đang bán rất chạy. Để đảm bảo
-                bạn có được ưu đãi này, chúng tôi cần khách sạn xác nhận còn
-                phòng hay không. Khách sạn thường xác nhận yêu cầu đặt phòng
-                trong vòng 15 phút. Nếu yêu cầu đặt phòng của bạn không thể xác
-                nhận, chúng tôi sẽ hoàn tiền đầy đủ
+                {{hotel['room-Details']['information3']}}
                 <h6>Hóa đơn</h6>
                 An tâm đặt phòng, Mytour hỗ trợ xuất hoá đơn nhanh chóng, tiết
                 kiệm thời gian cho bạn.
